--- a/src/content/projects/3.md
+++ b/src/content/projects/3.md
@@ -1,6 +1,6 @@
 ---
 title: "Biometric Authentication Domain Access Tool"
-info: "Another POC project utilising ESP32 microcontroller, Python, SG90 Servos and 3d Printing to make a face recognition enabled smart lock "
+info: "Another POC project utilising ESP32 microcontrollers, Python, SG90 Servos and 3D Modelling/Printing to make a facial recognition enabled smart lock "
 technologies: "python, esp32, tinkercad, 3d printing"
 video: "mAmi7Y-blU8"
 ---
